--- a/Inheritance.html
+++ b/Inheritance.html
@@ -20,7 +20,7 @@
 				}
 			}
 			
-			//Doctor.prototype = Person;
+			//Doctor.prototype = Person.prototype;
 			//Doctor.prototype.constructor = Doctor;
 			
 			function getDoctor(name, age, registerationId){
