--- a/timer.html
+++ b/timer.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-	
 	<head>
 		<script>
 			function timer(){
 				setInterval(function(){
                 var d = new Date();
-                console.log(d.getHours()+":"+d.getMinutes()+":"+d.getSeconds());
+                    console.log(d.getHours()+":"+d.getMinutes()+":"+d.getSeconds());
                 }, 1000);
 			}
 			
@@ -15,7 +14,7 @@
 	
 	<body onload="timer()">
 		<title>Timer</title>
-		rite a timer that displays time after every 1 sec-
+		Write a timer that displays time after every 1 sec
 	</body>
 	
 </html>
